# Chat-bot-tuy-n-sinh

./: PKG-INFO  config.yml  credentials.yml  domain.yml  events.db  pyproject.toml  rasa.db  setup.py
actions/: actions.py
data/: nlu.yml  rules.yml  stories.yml
rasax/community/: __main__.py  config.py  constants.py  data.py  global_state.py  initialise.py  jwt.py  key  local.py  scheduler.py  server.py  sql_migrations.py  telemetry.py  tracker_utils.py  version.py
rasax/community/api/: __init__.py  app.py  decorators.py
rasax/community/api/blueprints/: evaluations.py  git.py  intents.py  interface.py  logs.py  models.py  nlg.py  project.py  stack.py  telemetry.py  websocket.py
rasax/community/api/blueprints/conversations/: channels.py  slots.py  tags.py
rasax/community/api/blueprints/core/: rules.py  stories.py
rasax/community/api/blueprints/nlu/: entities.py  synonyms.py  training_examples.py
rasax/community/database/: __init__.py  admin.py  analytics.py  conversation.py  data.py  domain.py  model.py  service.py  utils.py
rasax/community/database/events/: annotation_dump_logger.py
rasax/community/database/schema_migrations/alembic/: utils.py
rasax/community/database/schema_migrations/alembic/versions/: migration_2019_10_09_add_original_value_field_to_training__3b15f8e56784.py  migration_2020_01_14_remove_is_unflagged_field_from_conversations_443af39e50e3.py  migration_2020_01_23_add_conversation_tags_22e9e6ea593c.py  migration_2020_02_18_add_slot_name_and_value_to__6738be716c3f.py  migration_2020_03_19_add_test_modify_permission_66bada3d94ae.py  migration_2020_03_20_fix_slot_value_index_on_postgresql_3fbc8790762e.py  migration_2020_03_24_merge_migrations_from_0_26_x_73f46e0b7789.py  migration_2020_03_31_rename_table_and_column_template_to__36fa577b374d.py  migration_2020_05_06_add_in_training_data_column_af3596f6982f.py  migration_2020_05_18_merge_migrations_from_0_24_x_9e7a97234e85.py  migration_2020_05_28_merge_heads_eb2b98905e7e.py  migration_2020_06_15_add_conversation_review_status_90b60aff4920.py  migration_2020_08_03_add_username_column_to_gitrepository_66d1adeeec82.py  migration_2020_09_24_add_is_rule_column_to_stories_6af361a57ca6.py
rasax/community/interface/: asset-manifest.json  index.html  precache-manifest.43b5000184697aad5ae5abe5e10d7434.js  service-worker.js
rasax/community/interface/static/css/: 2.9c49e7ce.chunk.css
rasax/community/interface/static/js/: 2.daf4e9ae.chunk.js  2.daf4e9ae.chunk.js.LICENSE.txt  3.f426b6fa.chunk.js  3.f426b6fa.chunk.js.LICENSE.txt  4.f8572bdb.chunk.js  5.e3dd1ed9.chunk.js  6.86a0db9e.chunk.js  main.2ae9087b.chunk.js  runtime-main.72952f09.js
rasax/community/services/: analytics_service.py  background_dump_service.py  config_service.py  data_service.py  db_migration_service.py  domain_service.py  evaluation_service.py  event_service.py  feature_service.py  intent_service.py  logs_service.py  model_service.py  nlg_service.py  role_service.py  settings_service.py  stack_service.py  story_service.py  test_service.py  user_service.py  websocket_service.py
rasax/community/services/event_consumers/: event_consumer.py  kafka_consumer.py  pika_consumer.py  sqlite_consumer.py
rasax/community/services/integrated_version_control/: exceptions.py  git_service.py  ssh_key_provider.py
rasax/community/utils/: common.py  config.py  io.py  yaml.py
web/: chatbot.html
